--- a/graduation_thesis_src_code_TranTrungHieu_20176754/old_configs/bert_abs/val_config.yaml
+++ b/graduation_thesis_src_code_TranTrungHieu_20176754/old_configs/bert_abs/val_config.yaml
@@ -1,17 +1,17 @@
-task: ext
-mode: test
+task: abs
+mode: validate
 
-bert_data_path: ./multi_news_bert_led_ext_shards/multi_news.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
-result_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
+bert_data_path: ./abs_bert_data_shards/multi_news_abs.bert_data
+model_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
+result_path: /content/gdrive/MyDrive/__projects/thesis/bertabs/saved_models_p2/
 temp_dir: ./temp
 
-model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
+model_config_path: model_config.yaml
 checkpoint: null
 
 
 train_from: null
-test_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/model_step_16000.pt
+test_from: null
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -19,11 +19,11 @@ report_rouge: True
 
 
 # general
-batch_size: 5000
-test_batch_size: 5000
+batch_size: 500
+test_batch_size: 1000
 
-max_pos: 8000
-max_position_embeddings: 8000
+max_pos: 512
+max_position_embeddings: 512
 use_interval: True
 
 # hyperparameters
@@ -52,9 +52,9 @@ generator_shard_size: 32
 alpha: 0.6 
 beam_size: 5
 min_length: 5
-max_length: 15
+max_length: 150
 max_tgt_len: 200 
-ext_predict_nsents: 40
+ext_predict_nsents: 20
 
 # gpu
 visible_gpus: '0'
@@ -63,4 +63,7 @@ world_size: 1
 seed: 666
 
 test_all: true
+load_from_extractive: ""
+sep_optim: True
 
+test_start_from: -1
