--- a/graduation_thesis_src_code_TranTrungHieu_20176754/old_configs/bert_abs_finest_finest/data_gen.yaml
+++ b/graduation_thesis_src_code_TranTrungHieu_20176754/old_configs/bert_abs_finest_finest/data_gen.yaml
@@ -1,17 +1,17 @@
-task: ext
+task: data_gen
 mode: test
 
-bert_data_path: ./multi_news_bert_led_ext_shards/multi_news.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
-result_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
+bert_data_path: ./multi_news_bert_led_shards/multi_news.bert_data
+model_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/
+result_path: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/
 temp_dir: ./temp
 
-model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
+model_config_path: model_config.yaml
 checkpoint: null
 
 
 train_from: null
-test_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/model_step_16000.pt
+test_from: /content/gdrive/MyDrive/__projects/thesis/bertext/saved_models_led/model_step_19000.pt
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -19,11 +19,11 @@ report_rouge: True
 
 
 # general
-batch_size: 5000
-test_batch_size: 5000
+batch_size: 1500
+test_batch_size: 200
 
-max_pos: 8000
-max_position_embeddings: 8000
+max_pos: 1024
+max_position_embeddings: 1024
 use_interval: True
 
 # hyperparameters
@@ -54,7 +54,7 @@ beam_size: 5
 min_length: 5
 max_length: 15
 max_tgt_len: 200 
-ext_predict_nsents: 40
+ext_predict_nsents: 15
 
 # gpu
 visible_gpus: '0'
