--- a/graduation_thesis_src_code_TranTrungHieu_20176754/old_configs/ultimate_led_ext_5/val_config.yaml
+++ b/graduation_thesis_src_code_TranTrungHieu_20176754/old_configs/ultimate_led_ext_5/val_config.yaml
@@ -1,17 +1,17 @@
 task: ext
-mode: test
+mode: validate
 
 bert_data_path: ./multi_news_bert_led_ext_shards/multi_news.bert_data
-model_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
-result_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/
+model_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/
+result_path: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models_5/
 temp_dir: ./temp
 
-model_config_path: ./old_configs/ultimate_led_ext/model_config.yaml
+model_config_path: model_config.yaml
 checkpoint: null
 
 
 train_from: null
-test_from: /content/gdrive/MyDrive/__projects/thesis/ext/led_ext/saved_models/model_step_16000.pt
+test_from: null
 log_file: ./logs/model_log
 
 block_trigram: True
@@ -22,8 +22,8 @@ report_rouge: True
 batch_size: 5000
 test_batch_size: 5000
 
-max_pos: 8000
-max_position_embeddings: 8000
+max_pos: 4000
+max_position_embeddings: 4000
 use_interval: True
 
 # hyperparameters
@@ -45,7 +45,7 @@ save_checkpoint_steps: 1000
 accum_count: 5
 report_every: 100
 train_steps: 20000
-recall_eval: False
+recall_eval: True
 ## trainer 
 label_smoothing: 0.1
 generator_shard_size: 32
@@ -54,7 +54,7 @@ beam_size: 5
 min_length: 5
 max_length: 15
 max_tgt_len: 200 
-ext_predict_nsents: 40
+ext_predict_nsents: 20
 
 # gpu
 visible_gpus: '0'
